--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
                     </execution>
                 </executions>
             </plugin>
+           <plugin>
+                 <artifactId>maven-war-plugin</artifactId>
+                 <version>3.0.0</version>
+          </plugin>
         </plugins>
     </build>
 </project>
